<resources>
    <string name="app_name">KekodProject1MertYigit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happiness">Happiness</string>
    <string name="giving">Giving</string>
    <string name="kindness">Kindness</string>
    <string name="respect">Respect</string>
    <string name="optimism">Optimism</string>
    <string name="ego">Ego</string>
    <string name="switches">Switches</string>
    <string name="menu_limit_reached">You have reached the maximum number of menu items.</string>
    <string name="menu_item_already_exists">Menu item already exist.</string>
    <string name="welcome_to_giving_fragment">Welcome to Giving Fragment</string>
    <string name="welcome_to_happiness_fragment">Welcome to Happiness Fragment</string>
    <string name="welcome_to_kindness_fragment">Welcome to Kindness Fragment</string>
    <string name="welcome_to_optimism_fragment">Welcome to Optimism Fragment</string>
    <string name="welcome_to_respect_fragment">Welcome to Respect Fragment</string>

</resources>